--- a/src/html/index.html
+++ b/src/html/index.html
@@ -2,35 +2,142 @@
 <html lang="en-US">
 
 <head>
-    <title>NodeTools</title>
-    <link rel="stylesheet" href="styles.css" type="text/css">
-    <link rel="icon" href="./icons/favicon.ico" type="image/x-icon">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Type" content="text/html">
-    <meta charset="UTF-8">
-    <meta name="description" content="NodeTools is a collection of tools for Node.js.">
+  <title>NodeTools</title>
+  <link rel="stylesheet" href="styles.css" type="text/css" />
+  <link rel="icon" href="./icons/NT_Logo.svg" type="image/x-icon" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:500&display=swap" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="Content-Type" content="text/html" />
+  <meta charset="UTF-8" />
+  <meta name="description" content="NodeTools is a collection of tools for Node.js." />
 </head>
 
 <body>
-    <div class="nav-menu">
-        <img src="./icons/NT_Header_White.svg" alt="NodeTools" class="logo">
-        <ul>
-            <li><button class="current-home">Home</button></li>
-            <li><button>Encode</button></li>
-            <li><button>Decode</button></li>
-            <li><button>IP Location</button></li>
-            <li><button>Password generator</button></li>
-            <li><button>QR Code generator</button></li>
-            <li><button>Steganography</button></li>
-            <li><button>Speedtest</button></li>
-        </ul>
-        <button class="settings"><img src="./icons/tune_white.svg" alt="Settings"></button>
+  <div class="nav-menu">
+    <img src="./icons/NT_Header_White.svg" alt="NodeTools" class="logo" />
+    <ul>
+      <li>
+        <button id="home-btn" class="current-home" type="menu">Home</button>
+      </li>
+      <li><button id="encode-btn" type="menu">Encode</button></li>
+      <li><button id="decode-btn" type="menu">Decode</button></li>
+      <li><button id="geoip-btn" type="menu">IP Location</button></li>
+      <li>
+        <button id="password-btn" type="menu">Password generator</button>
+      </li>
+      <li><button id="qrcode-btn" type="menu">QR Code generator</button></li>
+      <li><button id="stegano-btn" type="menu">Steganography</button></li>
+    </ul>
+    <button class="settings" id="settings-btn">
+      <img src="./icons/tune_white.svg" alt="Settings" />
+    </button>
+  </div>
+  <div class="content-area" id="content-area">
+    <div id="home" class="home active">
+      <h1>Home</h1>
+      <p>
+        NodeTools is a collection of tools for Node.js. It is a work in
+        progress and will be updated regularly.
+      </p>
+      <p>It contains tools like:</p>
+      <ul>
+        <li>Encode</li>
+        <li>Decode</li>
+        <li>IP Location</li>
+        <li>Password generator</li>
+        <li>QR Code generator</li>
+        <li>Steganography</li>
+      </ul>
     </div>
-    <div style="margin-left: 200px;">
-        <!-- Content -->
+    <div class="encode" id="encode">
+      <h1>Encode</h1>
+      <textarea id="input" class="input" rows="10" placeholder="Enter text to encode"></textarea>
+      <button id="convert" class="convert">Encode</button>
+      <textarea id="output" class="output" rows="10" placeholder="Encoded text" disabled="true"></textarea>
     </div>
-    <script src="index.js"></script>
+    <div class="decode" id="decode">
+      <h1>Decode</h1>
+      <textarea id="input" class="input" rows="10" placeholder="Enter text to decode"></textarea>
+      <button id="convert" class="convert">Decode</button>
+      <textarea id="output" class="output" rows="10" placeholder="Decoded text" disabled="true"></textarea>
+    </div>
+    <div id="ip_location" class="ip_location">
+      <h1>IP Location</h1>
+      <input id="input" class="input" type="text" placeholder="Enter IP" />
+      <button id="convert" class="convert">Get location</button>
+      <textarea id="output" class="output" rows="10" placeholder="Location" disabled="true"></textarea>
+    </div>
+    <div id="password_generator" class="password_generator">
+      <h1>Password generator</h1>
 
+      <label for="length" class="length-lable">Length:</label>
+      <input type="range" id="length" class="length" name="length" min="8" max="1024" value="16" />
+      <span id="length-value">16</span>
+      <br />
+      <table class="pwd-table">
+        <tr>
+          <td>
+            <label for="uppercase">Uppercase:</label>
+            <input type="checkbox" id="uppercase" name="uppercase" />
+          </td>
+          <td>
+            <label for="numbers">Numbers:</label>
+            <input type="checkbox" id="numbers" name="numbers" />
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <label for="lowercase">Lowercase:</label>
+            <input type="checkbox" id="lowercase" name="lowercase" />
+          </td>
+          <td>
+            <label for="symbols">Symbols:</label>
+            <input type="checkbox" id="symbols" name="symbols" />
+          </td>
+        </tr>
+      </table>
+      <button id="generate" class="convert">Generate password</button>
+      <textarea id="password" class="output" rows="10" placeholder="Password" disabled="true"></textarea>
+    </div>
+    <div id="qr_code_generator" class="qr_code_generator">
+      <h1>QR Code generator</h1>
+      <input id="input" class="input" type="text" placeholder="Enter text to encode" />
+      <button id="convert" class="convert">Generate QR Code</button>
+      <div id="output" class="output"></div>
+    </div>
+    <div id="steganography" class="steganography">
+      <h1 class="title">Steganography</h1>
+      <table>
+        <th>
+          <tr>
+            <th class="subtitle">Encode</th>
+            <th class="subtitle">Decode</th>
+          </tr>
+        </th>
+        <tr>
+          <td>
+            <form>
+              <label for="file-input">File:</label>
+              <input type="file" id="file-input" class="file-input" />
+              <label for="text-input">Text:</label>
+              <input type="text" id="text-input" class="text-input" /><br />
+              <button type="button" id="encode-button">Encode</button><br />
+            </form>
+            <img id="encoded-image" />
+          </td>
+          <td>
+            <form>
+              <label for="image-input">Image:</label>
+              <input type="file" id="image-input" /><br />
+              <button type="button" id="decode-button">Decode</button><br />
+              <textarea id="decoded-text" disabled></textarea>
+            </form>
+          </td>
+        </tr>
+      </table>
+    </div>
+  </div>
+  <script src="index.js"></script>
 </body>
 
 </html>
